src/test/ui/noexporttypeexe.stderr
error[E0308]: mismatched types
  --> $DIR/noexporttypeexe.rs:10:18
   |
LL |   let x: isize = noexporttypelib::foo();
   |          -----   ^^^^^^^^^^^^^^^^^^^^^^ expected `isize`, found enum `std::option::Option`
   |          |
   |          expected due to this
   |
   = note: expected type `isize`
              found enum `std::option::Option<isize>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
